--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.0",
+    "babel-eslint": "^7.1.1",
     "babel-plugin-module-resolver": "^2.5.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
     "eslint": "^3.1.1",
+    "eslint-config-airbnb": "^14.1.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "nodemon": "^1.9.2",
