--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:unit": "nyc npm run test:runner -- './src/**/test/*.spec.js' './example/**/test/*.spec.js' ",
     "test:unit:single": "nyc npm run test:runner -- -w",
     "test:coverage:html": "nyc report --reporter=html npm run test && open ./coverage/index.html",
-    "test:coverage:codecov":  "nyc report --reporter=text-lcov npm run test && codecov --token=c921461d-1641-4377-9faa-48183dd785ff"
+    "test:coverage:codecov":  "nyc report --reporter=text-lcov npm run test && codecov"
   },
   "repository": {
     "type": "git",
