--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "@priyanthag/doppinakin",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "DAM (Document Access Module) for node.js + Mongo",
   "main": "build/doppinakin.js",
   "scripts": {
-    "build": "babel -d build/ src/",
+    "build": "babel --out-dir build/ src/ --ignore src/test/,src/**/*/test/",
     "dev": "NODE_ENV=development nodemon -w src --exec \"babel-node src\"",
-    "lint": "eslint src",
-    "test": "npm run lint && npm run test:unit",
-    "test:runner": "NODE_ENV=test mocha --opts ./mocha.opts",
-    "test:unit": "nyc npm run test:runner -- './src/**/test/*.spec.js' './example/**/test/*.spec.js' ",
-    "test:unit:single": "nyc npm run test:runner -- -w",
-    "test:coverage:html": "nyc report --reporter=html npm run test && open ./coverage/index.html",
-    "test:coverage:codecov": "nyc report --reporter=lcovonly npm run test && codecov"
+    "lint": "eslint src/ example/",
+    "test-runner": "NODE_ENV=test mocha --opts ./mocha.opts",
+    "test": "nyc npm run test:unit",
+    "test:unit": "npm run test-runner -- './src/**/test/*.spec.js' './example/**/test/*.spec.js' ",
+    "test:unit:single": "npm run test-runner -- -w",
+    "test:coverage:html": "nyc report --reporter=html && open ./coverage/index.html",
+    "test:coverage:codecov": "nyc report --reporter=lcovonly && codecov"
   },
   "repository": {
     "type": "git",
@@ -42,8 +42,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
-    "eslint": "^3.1.1",
-    "eslint-config-airbnb": "^14.1.0",
+    "eslint": "^3.16.1",
+    "eslint-config-google": "^0.7.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "nodemon": "^1.9.2",
